--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.19.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
